# mission

./: .gitignore  AGENTS.md  README.md  TODO.md  agent.md  package-lock.json  package.json  start-backend.bat  start-dev.bat  start-mac.sh  start-macos.command  start-production.bat  start-server-dev.bat  start-web-dev.bat  开发指南.md
algorithms/: README.md  requirements.txt  run-with-venv.mjs  开发指南.md
algorithms/airlanding_zone/: dem_provider.py  landcover_provider.py  main.py  optimizer.py  threat_field.py
algorithms/battle-planner/: README.md  requirements.txt
algorithms/enemy-threat-analysis/: README.md  pyproject.toml  requirements.txt
algorithms/enemy-threat-analysis/enemy_threat_analysis/: __init__.py  analyze.py  assessment_report.py  cli.py  config.py  docx_report.py  errors.py  file_loader.py  heatmap_builder.py  image_exporter.py  llm_extractor.py  normalize.py  output_adapter.py  point_threat_field.py  profiles.py  progress.py  schemas.py  target_threat_score.py  target_value_score.py  utils.py  visualization_builder.py
algorithms/enemy-threat-analysis/examples/: mock_extraction.json  sample_enemy_report.txt
algorithms/enemy-threat-analysis/tests/: test_enemy_threat_analysis.py
apps/: .env.example  package-lock.json  vite.config.auth-check.js  vite.config.js
docs/: t01-bug-ledger.md  t02-localstorage-migration-inventory.md  t03-task-center-data-model.md  t03-task-center-schema-draft.sql  开发技术文档.md
scripts/: download-sample-tiles.mjs  generate-sample-tiles.mjs  generate-sample-tiles.ps1  start-production.mjs
测试文件/: 直升机作战性能表.docx  直升机数据标准.docx
(+198 files in other folders)
